# yt-fetch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  yt_fetch.yaml.example
.pyve/: config
docs/guides/: project_guide.md
docs/specs/: error_handling_features.md  features.md  new_features.md  plan.md  stories.md  tech_spec.md
tests/: conftest.py  test_batch.py  test_cli.py  test_id_parser.py  test_idempotency.py  test_library_api.py  test_logging.py  test_media.py  test_metadata.py  test_models.py  test_pipeline.py  test_pipeline_errors.py  test_rate_limit.py  test_retry.py  test_summary.py  test_transcript.py  test_transcript_format.py  test_writer.py
tests/integration/: test_fetch_live.py
yt_fetch/: __init__.py  __main__.py  cli.py
yt_fetch/core/: logging.py  models.py  options.py  pipeline.py  writer.py
yt_fetch/services/: __init__.py  id_parser.py  media.py  metadata.py  transcript.py
yt_fetch/utils/: ffmpeg.py  rate_limit.py  retry.py  time_fmt.py
